# cacheblend-hf-v6

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: CODING_CONVENTIONS.md  LMCACHE_IMPLEMENTATION.md  PROJECT_PLAN.md  VERIFICATION_PROTOCOL.md
docs/phases/: PHASE0_PROMPT.md  PHASE1_PROMPT.md  PHASE2_PROMPT.md  PHASE3_PROMPT.md  PHASE4_PROMPT.md
lmc/: cache_engine.py  config.py  gpu_connector.py  storage.py  token_database.py
lmc/compute/: positional_encoding.py
lmc/compute/attention/: abstract.py  eager.py  metadata.py  utils.py
lmc/compute/blend/: __init__.py  blender.py  full_reuse_blender.py  metadata.py  stub_blender.py  utils.py
lmc/compute/models/: base.py  llama.py  utils.py
lmc/integration/hf/: utils.py
reports/: phase0_5_setup.md  phase0_audit.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
results/phase1_vastai/: run_metadata.txt
results/phase2_vastai/: run_metadata.txt
results/phase3_vastai/: run_metadata.txt
results/phase4_vastai/: phase4_loong_n50.md  phase4_loong_n50_details.jsonl  phase4_musique_smoke.md  phase4_musique_smoke_details.jsonl
scripts/: _phase4_f1.py  _phase4_loong.py  _phase4_musique.py  _phase4_runtime.py  _phase4_tokenize.py  run_phase1_remote.sh  run_phase2_remote.sh  run_phase3_remote.sh  run_phase4_remote.sh  run_rag_comparison.py
tests/: test_phase1_layerwise.py  test_phase2_equivalence.py  test_phase3_blender.py  test_phase4_loong.py  test_phase4_rag_quality.py
